WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46651
[chromium] fix detection of missing fonts on DRT
https://bugs.webkit.org/show_bug.cgi?id=46651
Summary
[chromium] fix detection of missing fonts on DRT
Tony Chang
Reported
2010-09-27 14:15:10 PDT
[chromium] fix detection of missing fonts on DRT
Attachments
Patch
(2.46 KB, patch)
2010-09-27 14:18 PDT
,
Tony Chang
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-09-27 14:18:09 PDT
Created
attachment 68956
[details]
Patch
Tony Chang
Comment 2
2010-09-27 14:26:16 PDT
This doesn't impact the tests running, but it makes the error message less confusing.
Evan Martin
Comment 3
2010-09-27 15:39:02 PDT
LGTM
David Levin
Comment 4
2010-09-27 16:50:04 PDT
Comment on
attachment 68956
[details]
Patch I'm reluctant to set cq+ on this because it is is a chromium gtk only change, and you can commit changes. The cq does not error catching for you here so setting cq+ just means that this may get landed when you aren't around and if it has problems, someone else has to work it out. So I'll leave setting cq+ for you to do if/when you think it is prudent.
Tony Chang
Comment 5
2010-09-27 16:54:33 PDT
Comment on
attachment 68956
[details]
Patch No worries. I will land manually and watch the tree. I wasn't sure if the r+ would happen when I wasn't around.
Tony Chang
Comment 6
2010-09-27 17:06:30 PDT
Committed
r68451
: <
http://trac.webkit.org/changeset/68451
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug