2010-09-27  Tony Chang  <tony@chromium.org>

Reviewed by David Levin.

        [chromium] fix detection of missing fonts on DRT
        https://bugs.webkit.org/show_bug.cgi?id=46651

        * DumpRenderTree/chromium/TestShellGtk.cpp:
        (setupFontconfig):  Only print an error message if lohit isn't found in both locations.

Canonical link: https://commits.webkit.org/59139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68451 268f45cc-cd09-0410-ab3c-d52691b4dbfc